Se modificó y se agregaron las interfaces del apartado adopciones, las cuales fueron historial medico y sus derivados

--- a/layaout/editarRegistroPerrito.html
+++ b/layaout/editarRegistroPerrito.html
@@ -231,8 +231,10 @@
 							</div>
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-									<li class="breadcrumb-item active" aria-current="page">Registro</li>
+									<li class="breadcrumb-item"><a href="/layaout/index.html">Inicio</a></li>
+									<li class="breadcrumb-item"><a href="/layaout/mascota.html">Mascotas</a></li>
+
+									<li class="breadcrumb-item active" aria-current="page">Editar registro</li>
 								</ol>
 							</nav>
 						</div>
