--- a/layaout/listaAdopciones.html
+++ b/layaout/listaAdopciones.html
@@ -235,7 +235,7 @@
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
 									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-									<li class="breadcrumb-item active" aria-current="page">Listado</li>
+									<li class="breadcrumb-item active" aria-current="page">Listado adopciones</li>
 								</ol>
 							</nav>
 						</div>
