--- a/layaout/eliminarListaAdopciones.html
+++ b/layaout/eliminarListaAdopciones.html
@@ -231,8 +231,10 @@
 							</div>
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-									<li class="breadcrumb-item active" aria-current="page">Registro</li>
+									<li class="breadcrumb-item"><a href="/layaout/index.html">Inicio</a></li>
+									<li class="breadcrumb-item"><a href="/layaout/listaAdopciones.html">Listado de adopciones</a></li>
+
+									<li class="breadcrumb-item active" aria-current="page">Eliminar registro</li>
 								</ol>
 							</nav>
 						</div>
