--- a/layaout/registroAdopcion.html
+++ b/layaout/registroAdopcion.html
@@ -210,7 +210,7 @@
 						</a>
 						<ul class="submenu">
 							<li><a href="consultarInventario.html">Consultar Inventario</a></li>
-							<li><a href="listaArticulos.html">Lista de articulos</a></li>
+							<li><a href="listaArticulos.html">Listado de articulos</a></li>
 							
 						</ul>
 					</li>
@@ -231,8 +231,12 @@
 							</div>
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-									<li class="breadcrumb-item active" aria-current="page">Registro</li>
+									<li class="breadcrumb-item"><a href="/layaout/index.html">Inicio</a></li>
+									<li class="breadcrumb-item"><a href="/layaout/listaAdopciones.html">Listado adopciones</a></li>
+
+									<li class="breadcrumb-item active" aria-current="page">Nuevo registro</li>
+
+
 								</ol>
 							</nav>
 						</div>
