--- a/layaout/registroPerrito.html
+++ b/layaout/registroPerrito.html
@@ -231,8 +231,12 @@
 							</div>
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-									<li class="breadcrumb-item active" aria-current="page">Registro</li>
+									<li class="breadcrumb-item"><a href="/layaout/index.html">Inicio</a></li>
+									<li class="breadcrumb-item"><a href="/layaout/mascota.html">Mascotas</a></li>
+
+									<li class="breadcrumb-item active" aria-current="page">Nuevo registro</li>
+
+
 								</ol>
 							</nav>
 						</div>
