crud de entradas y salidas

--- a/layaout/salidas.html
+++ b/layaout/salidas.html
@@ -454,7 +454,7 @@
 					<div class="row">
 						<div class="col-md-6 col-sm-12">
 							<div class="title">
-								<h2>Entradas</h2>
+								<h2>Salidas</h2>
 							</div>
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
@@ -463,12 +463,6 @@
 							</nav>
 						</div>
 						<div class="col-md-6 col-sm-12 text-right">
-							
-							<div class="dropdown">
-								<a class="btn btn-primary" href="nuevoArticulo.html" role="button" data-toggle="">
-									Nuevo
-								</a>
-							</div>
 						</div>
 					</div>
 				</div>
@@ -498,10 +492,10 @@
 												<i class="dw dw-more"></i>
 											</a>
 											<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-												<a class="dropdown-item" href="/layaout/verArticulosEntradas.html"><i class="dw dw-eye"></i>Ver</a>
-												<a class="dropdown-item" href="/layaout/editarEntradasArticulos.html"><i class="dw dw-edit2"></i> Editar</a>
-												<a class="dropdown-item" href="/layaout/eliminarEntradaArticulos.html"><i class="dw dw-delete-3"></i> ELiminar</a>
-												</div>
+												<a class="dropdown-item" href="/layaout/verSalidasArticulo.html"><i class="dw dw-eye"></i>Ver</a>
+												<a class="dropdown-item" href="/layaout/editarSalidaArticulos.html"><i class="dw dw-edit2"></i> Editar</a>
+												<a class="dropdown-item" href="#"><i class="dw dw-delete-3"></i> ELiminar</a>
+													</div>
 												</div>
 											</div>
 										</div>
