--- a/layaout/listaAdopciones.html
+++ b/layaout/listaAdopciones.html
@@ -30,12 +30,7 @@
 		gtag('config', 'UA-119386393-1');
 	</script>
 </head>
-<body>
-<<<<<<< HEAD
-=======
-	
->>>>>>> e2ed06c (Se modificó y se agregaron las interfaces del apartado adopciones, las cuales fueron listado de adopciones y mascota)
-
+<body>	
 	<div class="header">
 		<div class="header-left">
 			<div class="menu-icon dw dw-menu"></div>
@@ -72,16 +67,18 @@
 				</div>
 			</div>
 			<div class="user-info-dropdown">
-				<div class="dropdown">
-					<a class="dropdown-toggle" href="#" role="button" data-toggle="dropdown">
-						<span class="user-icon">
-							<img src="vendors/images/photo1.jpg" alt="">
-						</span>
-						<span class="user-name">Usuario</span>
-					</a>
-					<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-						<a class="dropdown-item" href="profile.html"><i class="dw dw-user1"></i> Perfil</a>					
-						<a class="dropdown-item" href="/index.html"><i class="dw dw-logout"></i> Cerrar Sesion</a>
+				<div class="user-info-dropdown">
+					<div class="dropdown">
+						<a class="dropdown-toggle" href="#" role="button" data-toggle="dropdown">
+							<span class="user-icon">
+								<img src="vendors/images/photo1.jpg" alt="">
+							</span>
+							<span class="user-name">Usuario</span>
+						</a>
+						<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
+							<a class="dropdown-item" href="profile.html"><i class="dw dw-user1"></i> Perfil</a>					
+							<a class="dropdown-item" href="/index.html"><i class="dw dw-logout"></i> Cerrar Sesion</a>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -280,6 +277,7 @@
 											<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
 												<a class="dropdown-item" href="/layaout/verListaAdopciones.html"><i class="dw dw-eye"></i>Ver</a>
 												<a class="dropdown-item" href="/layaout/editarListaAdopciones.html"><i class="dw dw-edit2"></i>Editar</a>
+												
 												<a class="dropdown-item" href="/layaout/eliminarListaAdopciones.html"><i class="dw dw-delete-3"></i>Eliminar</a>
 											</div>
 										</div>
