--- a/layaout/listaDonaciones.html
+++ b/layaout/listaDonaciones.html
@@ -234,8 +234,10 @@
 							</div>
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index.html">Home</a></li>
-									<li class="breadcrumb-item active" aria-current="page">Form Basic</li>
+									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
+									
+
+									<li class="breadcrumb-item active" aria-current="page">Listado donaciones</li>
 								</ol>
 							</nav>
 						</div>
