Se modificaron aparartados de adopciones

--- a/layaout/eliminarListaAdopciones.html
+++ b/layaout/eliminarListaAdopciones.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- Basic Page Info -->
 	<meta charset="utf-8">
-	<title>Lista de Adopciones</title>
+	<title>Eliminar</title>
 
 	<!-- Site favicon -->
 	<link rel="website icon" href="vendors/images/listaAdopciones.png">
@@ -231,14 +231,9 @@
 							</div>
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
-<<<<<<< HEAD
-									<li class="breadcrumb-item"><a href="/layaout/index.html">Inicio</a></li>
-									<li class="breadcrumb-item"><a href="/layaout/listaAdopciones.html">Listado de adopciones</a></li>
 
-=======
 									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
 									<li class="breadcrumb-item"><a href="/layaout/listaAdopciones.html">Listado de adopciones</a></li>
->>>>>>> 7606f72 (Se completó el apartado de mascota y adopciones, asi mismo el perfil del usuario)
 									<li class="breadcrumb-item active" aria-current="page">Eliminar registro</li>
 								</ol>
 							</nav>
@@ -267,7 +262,7 @@
 				<!-- Input Validation End -->
 			</div>
 			<div class="footer-wrap pd-20 mb-20 card-box">
-				DeskApp - Bootstrap 4 Admin Template By <a href="https://github.com/dropways" target="_blank">Ankit Hingarajiya</a>
+				Doggy At Home <a href="#" target="_blank">All Rights Reserved.</a>
 			</div>
 		</div>
 	</div>
