--- a/layaout/historialMedico.html
+++ b/layaout/historialMedico.html
@@ -250,7 +250,7 @@
 				<div class="card-box mb-30">
 					<div class="pd-20">
 						<h4 class="text-blue h4">Listado</h4><br>
-						<a href="/layaout/registroAdopcion.html"><button style="background-color: #1b00ff;"  class="btn btn-success ">Registrar un nuevo historial </button></a><br>
+						<a href="/layaout/registroHistorialMedico.html"><button style="background-color: #1b00ff;"  class="btn btn-success ">Registrar un nuevo historial </button></a><br>
 
 					</div>
 					
@@ -283,9 +283,9 @@
 												<i class="dw dw-more"></i>
 											</a>
 											<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-												<a class="dropdown-item" href="/layaout/verListaAdopciones.html"><i class="dw dw-eye"></i>Ver</a>
-												<a class="dropdown-item" href="/layaout/editarListaAdopciones.html"><i class="dw dw-edit2"></i>Editar</a>
-												<a class="dropdown-item" href="/layaout/eliminarListaAdopciones.html"><i class="dw dw-delete-3"></i>Eliminar</a>
+												<a class="dropdown-item" href="/layaout/"><i class="dw dw-eye"></i>Ver</a>
+												<a class="dropdown-item" href="/layaout/editarHistorialMedico.html"><i class="dw dw-edit2"></i>Editar</a>
+												<a class="dropdown-item" href="/layaout/eliminarHistorialMedico.html"><i class="dw dw-delete-3"></i>Eliminar</a>
 											</div>
 										</div>
 									</td>
