--- a/layaout/registroPerrito.html
+++ b/layaout/registroPerrito.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- Basic Page Info -->
 	<meta charset="utf-8">
-	<title>Historial medico</title>
+	<title>Registro</title>
 
 	<!-- Site favicon -->
 	<link rel="website icon" href="vendors/images/historialMedico.pngz">
@@ -231,18 +231,12 @@
 							</div>
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
-<<<<<<< HEAD
+
 									<li class="breadcrumb-item"><a href="/layaout/index.html">Inicio</a></li>
 									<li class="breadcrumb-item"><a href="/layaout/mascota.html">Mascotas</a></li>
 
 									<li class="breadcrumb-item active" aria-current="page">Nuevo registro</li>
 
-
-=======
-									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-									<li class="breadcrumb-item"><a href="/layaout/mascota.html">Mascotas</a></li>
-									<li class="breadcrumb-item active" aria-current="page">Nuevo registro mascota</li>
->>>>>>> 7606f72 (Se completó el apartado de mascota y adopciones, asi mismo el perfil del usuario)
 								</ol>
 							</nav>
 						</div>
