--- a/layaout/registroHistorialMedico.html
+++ b/layaout/registroHistorialMedico.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- Basic Page Info -->
 	<meta charset="utf-8">
-	<title>Historial medico</title>
+	<title>Registrar</title>
 
 	<!-- Site favicon -->
 	<link rel="website icon" href="vendors/images/historialMedico.pngz">
