--- a/layaout/mascota.html
+++ b/layaout/mascota.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -76,13 +77,8 @@
 						<span class="user-name">Usuario</span>
 					</a>
 					<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-<<<<<<< HEAD
 						<a class="dropdown-item" href="profile.html"><i class="dw dw-user1"></i> Perfil</a>					
 						<a class="dropdown-item" href="/index.html"><i class="dw dw-logout"></i> Cerrar Sesion</a>
-=======
-						<a class="dropdown-item" href="profile.html"><i class="dw dw-user1"></i> Perfil</a>
-						<a class="dropdown-item" href="profile.html"><i class="dw dw-settings2"></i> Configuración</a>						<a class="dropdown-item" href="/index.html"><i class="dw dw-logout"></i> Cerrar Sesion</a>
->>>>>>> e2ed06c (Se modificó y se agregaron las interfaces del apartado adopciones, las cuales fueron listado de adopciones y mascota)
 					</div>
 				</div>
 			</div>
@@ -185,6 +181,9 @@
 						<ul class="submenu">
 							<li><a href="usuarios.html">Gestión de usuarios</a></li>
 						</ul>
+						<ul class="submenu">
+							<li><a href="adoptantes.html">Gestión de adoptantes</a></li>
+						</ul>
 					</li>
 					<li class="dropdown">
 						<a href="javascript:;" class="dropdown-toggle">
@@ -222,7 +221,6 @@
 			</div>
 		</div>
 	</div>
-
 	<div class="mobile-menu-overlay"></div>
 
 	<div class="main-container">
