--- a/layaout/registroAdopcion.html
+++ b/layaout/registroAdopcion.html
@@ -1,12 +1,13 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 	<!-- Basic Page Info -->
 	<meta charset="utf-8">
-	<title>Historial medico</title>
+	<title>Registrar adopción</title>
 
 	<!-- Site favicon -->
-	<link rel="website icon" href="vendors/images/historialMedico.pngz">
+	<link rel="website icon" href="vendors/images/adopcion.png">
 
 	<!-- Mobile Specific Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -31,7 +32,6 @@
 	</script>
 </head>
 <body>
-
 
 	<div class="header">
 		<div class="header-left">
@@ -181,6 +181,9 @@
 						<ul class="submenu">
 							<li><a href="usuarios.html">Gestión de usuarios</a></li>
 						</ul>
+						<ul class="submenu">
+							<li><a href="adoptantes.html">Gestión de adoptantes</a></li>
+						</ul>
 					</li>
 					<li class="dropdown">
 						<a href="javascript:;" class="dropdown-toggle">
@@ -210,7 +213,7 @@
 						</a>
 						<ul class="submenu">
 							<li><a href="consultarInventario.html">Consultar Inventario</a></li>
-							<li><a href="listaArticulos.html">Listado de articulos</a></li>
+							<li><a href="listaArticulos.html">Lista de articulos</a></li>
 							
 						</ul>
 					</li>
@@ -231,18 +234,9 @@
 							</div>
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
-<<<<<<< HEAD
-									<li class="breadcrumb-item"><a href="/layaout/index.html">Inicio</a></li>
-									<li class="breadcrumb-item"><a href="/layaout/listaAdopciones.html">Listado adopciones</a></li>
-
-									<li class="breadcrumb-item active" aria-current="page">Nuevo registro</li>
-
-
-=======
 									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
 									<li class="breadcrumb-item"><a href="/layaout/listaAdopciones.html">Lista de adopciones</a></li>
 									<li class="breadcrumb-item active" aria-current="page">Añadir nuevo registro</li>
->>>>>>> 7606f72 (Se completó el apartado de mascota y adopciones, asi mismo el perfil del usuario)
 								</ol>
 							</nav>
 						</div>
