--- a/layaout/historialMedico.html
+++ b/layaout/historialMedico.html
@@ -1,12 +1,13 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 	<!-- Basic Page Info -->
 	<meta charset="utf-8">
-	<title>Historial Medico</title>
+	<title>Historial medico</title>
 
 	<!-- Site favicon -->
-	<link rel="website icon" href="vendors/images/listaAdopciones.png">
+	<link rel="website icon" href="vendors/images/historialMedico.png">
 
 	<!-- Mobile Specific Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -31,14 +32,6 @@
 	</script>
 </head>
 <body>
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-	
->>>>>>> e2ed06c (Se modificó y se agregaron las interfaces del apartado adopciones, las cuales fueron listado de adopciones y mascota)
-=======
-
->>>>>>> 7606f72 (Se completó el apartado de mascota y adopciones, asi mismo el perfil del usuario)
 
 	<div class="header">
 		<div class="header-left">
@@ -187,6 +180,9 @@
 						</a>
 						<ul class="submenu">
 							<li><a href="usuarios.html">Gestión de usuarios</a></li>
+						</ul>
+						<ul class="submenu">
+							<li><a href="adoptantes.html">Gestión de adoptantes</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
