--- a/layaout/index.html
+++ b/layaout/index.html
@@ -4,10 +4,10 @@
 <head>
 	<!-- Basic Page Info -->
 	<meta charset="utf-8">
-	<title>Mascota</title>
+	<title>Inicio</title>
 
 	<!-- Site favicon -->
-	<link rel="website icon" href="vendors/images/mascota.png">
+	<link rel="website icon" href="vendors/images/logoLigth.png">
 
 	<!-- Mobile Specific Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -180,6 +180,9 @@
 						</a>
 						<ul class="submenu">
 							<li><a href="usuarios.html">Gestión de usuarios</a></li>
+						</ul>
+						<ul class="submenu">
+							<li><a href="adoptantes.html">Gestión de adoptantes</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
