--- a/layaout/listaAdopciones.html
+++ b/layaout/listaAdopciones.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 	<!-- Basic Page Info -->
 	<meta charset="utf-8">
-	<title>Lista de Adopciones</title>
+	<title>Lista adopciones</title>
 
 	<!-- Site favicon -->
 	<link rel="website icon" href="vendors/images/listaAdopciones.png">
@@ -30,7 +31,8 @@
 		gtag('config', 'UA-119386393-1');
 	</script>
 </head>
-<body>	
+<body>
+
 	<div class="header">
 		<div class="header-left">
 			<div class="menu-icon dw dw-menu"></div>
@@ -67,18 +69,16 @@
 				</div>
 			</div>
 			<div class="user-info-dropdown">
-				<div class="user-info-dropdown">
-					<div class="dropdown">
-						<a class="dropdown-toggle" href="#" role="button" data-toggle="dropdown">
-							<span class="user-icon">
-								<img src="vendors/images/photo1.jpg" alt="">
-							</span>
-							<span class="user-name">Usuario</span>
-						</a>
-						<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-							<a class="dropdown-item" href="profile.html"><i class="dw dw-user1"></i> Perfil</a>					
-							<a class="dropdown-item" href="/index.html"><i class="dw dw-logout"></i> Cerrar Sesion</a>
-						</div>
+				<div class="dropdown">
+					<a class="dropdown-toggle" href="#" role="button" data-toggle="dropdown">
+						<span class="user-icon">
+							<img src="vendors/images/photo1.jpg" alt="">
+						</span>
+						<span class="user-name">Usuario</span>
+					</a>
+					<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
+						<a class="dropdown-item" href="profile.html"><i class="dw dw-user1"></i> Perfil</a>					
+						<a class="dropdown-item" href="/index.html"><i class="dw dw-logout"></i> Cerrar Sesion</a>
 					</div>
 				</div>
 			</div>
@@ -180,6 +180,9 @@
 						</a>
 						<ul class="submenu">
 							<li><a href="usuarios.html">Gestión de usuarios</a></li>
+						</ul>
+						<ul class="submenu">
+							<li><a href="adoptantes.html">Gestión de adoptantes</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
