--- a/layaout/listaDonaciones.html
+++ b/layaout/listaDonaciones.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 	<!-- Basic Page Info -->
 	<meta charset="utf-8">
-	<title>Lista donaciones</title>
+	<title>Lista de donaciones</title>
 
 	<!-- Site favicon -->
 	<link rel="website icon" href="vendors/images/listaDonaciones.png">
@@ -31,10 +32,6 @@
 	</script>
 </head>
 <body>
-<<<<<<< HEAD
-=======
-	
->>>>>>> e2ed06c (Se modificó y se agregaron las interfaces del apartado adopciones, las cuales fueron listado de adopciones y mascota)
 
 	<div class="header">
 		<div class="header-left">
@@ -183,6 +180,9 @@
 						</a>
 						<ul class="submenu">
 							<li><a href="usuarios.html">Gestión de usuarios</a></li>
+						</ul>
+						<ul class="submenu">
+							<li><a href="adoptantes.html">Gestión de adoptantes</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
