--- a/layaout/registroUsuario.html
+++ b/layaout/registroUsuario.html
@@ -1,14 +1,13 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 	<!-- Basic Page Info -->
 	<meta charset="utf-8">
-	<title>Registro</title>
+	<title>Registro usuario</title>
 
 	<!-- Site favicon -->
-	<link rel="apple-touch-icon" sizes="180x180" href="vendors/images/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="vendors/images/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="vendors/images/favicon-16x16.png">
+	<link rel="website icon" href="vendors/images/usuario.png">
 
 	<!-- Mobile Specific Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -78,8 +77,8 @@
 						<span class="user-name">Usuario</span>
 					</a>
 					<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-						<a class="dropdown-item" href="profile.html"><i class="dw dw-user1"></i> Perfil</a>
-						<a class="dropdown-item" href="profile.html"><i class="dw dw-settings2"></i> Configuración</a>						<a class="dropdown-item" href="/index.html"><i class="dw dw-logout"></i> Cerrar Sesion</a>
+						<a class="dropdown-item" href="profile.html"><i class="dw dw-user1"></i> Perfil</a>					
+						<a class="dropdown-item" href="/index.html"><i class="dw dw-logout"></i> Cerrar Sesion</a>
 					</div>
 				</div>
 			</div>
@@ -164,8 +163,9 @@
 	<div class="left-side-bar">
 		<div class="brand-logo">
 			<a href="index.html">
-				<img src="vendors/images/deskapp-logo.svg" alt="" class="dark-logo">
-				<img src="vendors/images/deskapp-logo-white.svg" alt="" class="light-logo">
+				<img src="vendors/images/logoLigth.png" style="height: 50px; width: 50px; margin-right: 1rem;" alt="" class="dark-logo">
+				<img src="vendors/images/logoDark.png" style="height: 50px; width: 50px; margin-right: 1rem;"alt="" class="light-logo" >
+				<h3 style="font-size: 20px; color: #17a2b8;">Doggy At Home</h3>
 			</a>
 			<div class="close-sidebar" data-toggle="left-sidebar-close">
 				<i class="ion-close-round"></i>
@@ -180,6 +180,9 @@
 						</a>
 						<ul class="submenu">
 							<li><a href="usuarios.html">Gestión de usuarios</a></li>
+						</ul>
+						<ul class="submenu">
+							<li><a href="adoptantes.html">Gestión de adoptantes</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
@@ -232,8 +235,8 @@
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
 									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-									<li class="breadcrumb-item"><a href="usuarios.html">Listado de Usuarios</a></li>
-									<li class="breadcrumb-item active" aria-current="page">Registro</li>
+									<li class="breadcrumb-item"><a href="usuarios.html">Usuarios</a></li>
+									<li class="breadcrumb-item active" aria-current="page">Registro de nuevo usuario</li>
 								</ol>
 							</nav>
 						</div>
@@ -278,6 +281,24 @@
 							</div>
 						</div>
 						<div class="form-group row">
+							<label class="col-sm-12 col-md-2 col-form-label">Usuario</label>
+							<div class="col-sm-12 col-md-10">
+								<input class="form-control" type="text" placeholder="sarmiento">
+							</div>
+						</div>
+						<div class="form-group row">
+							<label class="col-sm-12 col-md-2 col-form-label">Contraseña</label>
+							<div class="col-sm-12 col-md-10">
+								<input class="form-control" type="password" placeholder="sarmiento">
+							</div>
+						</div>
+						<div class="form-group row">
+							<label class="col-sm-12 col-md-2 col-form-label">Repetir contraseña</label>
+							<div class="col-sm-12 col-md-10">
+								<input class="form-control" type="password" placeholder="sarmiento">
+							</div>
+						</div>
+						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Celular</label>
 							<div class="col-sm-12 col-md-10">
 								<input class="form-control" type="text" placeholder="10 meses">
@@ -304,13 +325,17 @@
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Rol</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Criollo">
+								<select class="custom-select col-12">
+									<option selected="">Selecciona</option>
+									<option value="1">Administrador</option>
+									<option value="2">Veterinario</option>
+								</select>
 							</div>
 						</div>
                             
 					</form>
-<a href="/layaout/mascota.html"><button class="btn btn-primary">Guardar</button></a>
-<a href="/layaout/mascota.html"><button style="border-color: brown; background-color: brown;" class="btn btn-primary">Cancelar</button></a>
+<a href="/layaout/usuarios.html"><button class="btn btn-primary">Guardar</button></a>
+<a href="/layaout/usuarios.html"><button style="border-color: brown; background-color: brown;" class="btn btn-primary">Cancelar</button></a>
 
 
 </form>
