--- a/layaout/seguimientoProceso.html
+++ b/layaout/seguimientoProceso.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 	<!-- Basic Page Info -->
 	<meta charset="utf-8">
-	<title>Seguimiento Proceso</title>
+	<title>Seguimiento proceso</title>
 
 	<!-- Site favicon -->
 	<link rel="website icon" href="vendors/images/seguimientoProceso.png">
@@ -179,6 +180,9 @@
 						</a>
 						<ul class="submenu">
 							<li><a href="usuarios.html">Gestión de usuarios</a></li>
+						</ul>
+						<ul class="submenu">
+							<li><a href="adoptantes.html">Gestión de adoptantes</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
