Se agrega intefaces CRUD para la solicitud de adopcion, se modifica el ver de adoptantes, usuarios, solicitud de adopcion y seguimiento de proceso para que los inputs no se dejen sobre-escribir

--- a/layaout/verDonacion.html
+++ b/layaout/verDonacion.html
@@ -254,7 +254,7 @@
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Tipo donación</label>
 							<div class="col-sm-12 col-md-10">
-								<select class="custom-select col-12">
+								<select disabled class="custom-select col-12">
 									<option selected="">Selecciona</option>
 									<option value="1">Insumos</option>
 									<option value="2">Dinero</option>
@@ -264,32 +264,32 @@
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Donante</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Dorado">
+								<input disabled class="form-control" type="text" placeholder="Dorado">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Articulo</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="10 meses">
+								<input disabled class="form-control" type="text" placeholder="10 meses">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Referencia</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Criollo">
+								<input disabled class="form-control" type="text" placeholder="Criollo">
 							</div>
 						</div>
 					
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">cantidad</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="img" placeholder="png">
+								<input disabled class="form-control" type="img" placeholder="png">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Fecha</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="date" placeholder="08/10/2023">
+								<input disabled class="form-control" type="date" placeholder="08/10/2023">
 							</div>
 						</div>
                             
