--- a/layaout/verInformaciónAdoptante.html
+++ b/layaout/verInformaciónAdoptante.html
@@ -31,10 +31,7 @@
 	</script>
 </head>
 <body>
-<<<<<<< HEAD
-=======
 	
->>>>>>> e2ed06c (Se modificó y se agregaron las interfaces del apartado adopciones, las cuales fueron listado de adopciones y mascota)
 
 <div class="header">
 	<div class="header-left">
@@ -248,7 +245,7 @@
 				<div class="pd-20 card-box mb-30">
 					<div class="clearfix">
 						<div class="pull-left">
-							<h4 class="text-blue h4">Información del usuario</h4><br>
+							<h4 class="text-blue h4">Información del adoptante</h4><br>
 						</div>
 						
 					</div>
@@ -256,19 +253,19 @@
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Nombres</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Pedro">
+								<input disabled class="form-control" type="text" placeholder="Pedro">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Apellidos</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="sarmiento">
+								<input disabled class="form-control" type="text" placeholder="sarmiento">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Tipo Documento</label>
 							<div class="col-sm-12 col-md-10">
-								<select class="custom-select col-12">
+								<select disabled class="custom-select col-12">
 									<option selected="">Selecciona</option>
 									<option value="1">CC</option>
 									<option value="2">TI</option>
@@ -279,53 +276,43 @@
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Documento</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="sarmiento">
+								<input disabled class="form-control" type="text" placeholder="sarmiento">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Usuario</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="sarmiento">
+								<input disabled class="form-control" type="text" placeholder="sarmiento">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Contraseña</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="password" placeholder="sarmiento">
+								<input disabled class="form-control" type="password" placeholder="sarmiento">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Celular</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="10 meses">
+								<input disabled class="form-control" type="text" placeholder="10 meses">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Ciudad</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Criollo">
+								<input disabled class="form-control" type="text" placeholder="Criollo">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Dirección</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Criollo">
+								<input disabled class="form-control" type="text" placeholder="Criollo">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Correo</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Criollo">
-							</div>
-						</div>
-						<div class="form-group row">
-							<label class="col-sm-12 col-md-2 col-form-label">Rol</label>
-							<div class="col-sm-12 col-md-10">
-								<select class="custom-select col-12">
-									<option selected="">Selecciona</option>
-									<option value="1">Administrador</option>
-									<option value="2">Veterinario</option>
-								</select>
+								<input disabled class="form-control" type="text" placeholder="Criollo">
 							</div>
 						</div>
                             
