--- a/layaout/verInformaciónUsuario.html
+++ b/layaout/verInformaciónUsuario.html
@@ -253,19 +253,19 @@
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Nombres</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Pedro">
+								<input disabled class="form-control" type="text" placeholder="Pedro">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Apellidos</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="sarmiento">
+								<input disabled class="form-control" type="text" placeholder="sarmiento">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Tipo Documento</label>
 							<div class="col-sm-12 col-md-10">
-								<select class="custom-select col-12">
+								<select disabled class="custom-select col-12">
 									<option selected="">Selecciona</option>
 									<option value="1">CC</option>
 									<option value="2">TI</option>
@@ -276,49 +276,49 @@
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Documento</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="sarmiento">
+								<input disabled class="form-control" type="text" placeholder="sarmiento">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Usuario</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="sarmiento">
+								<input disabled class="form-control" type="text" placeholder="sarmiento">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Contraseña</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="password" placeholder="sarmiento">
+								<input disabled class="form-control" type="password" placeholder="sarmiento">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Celular</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="10 meses">
+								<input disabled class="form-control" type="text" placeholder="10 meses">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Ciudad</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Criollo">
+								<input disabled class="form-control" type="text" placeholder="Criollo">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Dirección</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Criollo">
+								<input disabled class="form-control" type="text" placeholder="Criollo">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Correo</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" placeholder="Criollo">
+								<input disabled class="form-control" type="text" placeholder="Criollo">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Rol</label>
 							<div class="col-sm-12 col-md-10">
-								<select class="custom-select col-12">
+								<select disabled class="custom-select col-12">
 									<option selected="">Selecciona</option>
 									<option value="1">Administrador</option>
 									<option value="2">Veterinario</option>
