--- a/layaout/verSeguimiento.html
+++ b/layaout/verSeguimiento.html
@@ -278,7 +278,7 @@
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Fecha</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="date" name="inputname" value="datos a enviar" readonly placeholder="08/10/2023">
+								<input disabled class="form-control" type="date" placeholder="08/10/2023">
 							</div>
 						</div>
 						<div class="form-group row">
@@ -290,7 +290,7 @@
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Solicitud de adopción</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="text" name="inputname" value="datos a enviar" readonly placeholder="10 meses">
+								<input disabled class="form-control" type="text" placeholder="10 meses">
 							</div>
 						</div>
 						
